mockDB 형성, templete 분리

--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     <header>
         <nav class="nav">
             <div class="nav-logoBox">
-                <h1 class="title">Cosmetic Guide</h1>
+                <h1 class="title"><a href="/">Cosmetic Guide</a></h1>
             </div>
-            <!--
-            <div class="nav-buttonBox">
-                <button class="btn btn-contact">Contact</button>
-            </div>-->
         </nav>
     </header>
     <section>
@@ -25,7 +21,11 @@
             <div class="coverPage-container">
                 <div class="coverPage-textBox">
                     <h1 class="title">Cosmetic Guide</h1>
-                    <h2 class="description">아름다움은 당신이 당신답게라고<br> 결정한 순간 시작됩니다</h2>
+                    <h2 class="description">
+                        아름다움은 당신이 당신답게라고<br>
+                        결정한 순간 시작됩니다<br><br>
+                        당신의 피부톤을 알아보세요<br>
+                    </h2>
                 </div>
                 <div class="coverPage-buttonBox">
                     <button class="btn btn-getStarted">Get Started</button>
@@ -35,48 +35,18 @@
         <article class="howToUse">
             <div class="howToUse-container">
                 <div class="howToUse-title">
-                    <h1>How to use</h1>
-                </div>
-                <div class="howToUse-box">
-                    <div class="howToUse-box-title">
-                        <h1>01</h1>
-                    </div>
-                    <div class="howToUse-box-description">
-                        <p>이렇게 사용하세요!<br>펭귄을 찾는다</p>
-                    </div>
-                    <div class="howToUse-box-imgBox">
-                        <img class="howToUse-box-imgBox-img" src="http://placehold.it/150x150">
-                    </div>
-                </div>
-                <div class="howToUse-box">
-                    <div class="howToUse-box-title">
-                        <h1>02</h1>
-                    </div>
-                    <div class="howToUse-box-description">
-                        <p>이렇게 사용하세요!<br>펭귄을 잡는다</p>
-                    </div>
-                    <div class="howToUse-box-imgBox">
-                        <img class="howToUse-box-imgBox-img" src="http://placehold.it/150x150">
-                    </div>
-                </div>
-                <div class="howToUse-box">
-                    <div class="howToUse-box-title">
-                        <h1>03</h1>
-                    </div>
-                    <div class="howToUse-box-description">
-                        <p>이렇게 사용하세요<br>펭귄을 때린다</p>
-                    </div>
-                    <div class="howToUse-box-imgBox">
-                        <img class="howToUse-box-imgBox-img" src="http://placehold.it/150x150">
-                    </div>
+                    <h1 class="title">How to use</h1>
                 </div>
             </div>
         </article>
     </section>
-    <footer></footer>
+
 
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/mockdb.js"></script>
+    <script type="text/javascript" src="js/templete.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+
 </body>
 </html>
